public/styles/tweet.css
article {
  padding: 0.5em;
  background-color: #f4f1ec;
  border: 4px solid black;
  margin: 1em 0;
}

article header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.25em;
}

.picture-name {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.picture-name img {
  max-height: 43px;
  max-width: 43px;
}

.picture-name a {
  padding: 0.25em;
}

article header a {
  color: #4056a1;
}

article p {
  padding: 0.5em;
}

article footer {
  padding: 0.5em;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-top: 4px solid black;
  font-size: smaller;
}

.socials {
  color:  #4056A1;
}

article:hover {
  box-shadow: 0.25em 0.25em #798ed6;
  font-weight: bolder;
}

